--- a/education.css
+++ b/education.css
@@ -39,7 +39,7 @@ body {
 
     html::-webkit-scrollbar {
         width: 10px;
-        background: #67AAF9;
+        background: white;
     }
     
     html::-webkit-scrollbar-button {
@@ -52,7 +52,7 @@ body {
     }
     
     html::-webkit-scrollbar-track {
-        background: #67AAF9;
+        background: white;
     }
         
 }
@@ -305,6 +305,7 @@ header {
             display: flex;
             flex-flow: row wrap;
             justify-content: center;
+            margin-top: 5vh;
         }
 
             .experience * {
