--- a/printing.css
+++ b/printing.css
@@ -272,7 +272,7 @@
     @media screen {
 
         body {
-            background-color: #003049;
+            background-color: #67AAF9;
         }
 
         *:not(header, header p, body, html) {
