--- a/experience.css
+++ b/experience.css
@@ -293,7 +293,7 @@ header {
         .experience {
             display: flex;
             flex-flow: row wrap;
-            justify-content: flex-start;
+            justify-content: center;
         }
 
             .experience * {
