--- a/printing.css
+++ b/printing.css
@@ -407,8 +407,8 @@
             justify-content: space-between;
             align-content: space-between;
             border-top: 2px solid #8e8e8e;
-            padding-top: 1em;
-            padding-bottom: 1em;
+            padding-top: 0.5em;
+            padding-bottom: 0.5em;
         }
 
             .experience * {
@@ -480,5 +480,17 @@
             padding-bottom: 1em;
         }
 
+        .activity {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            align-content: flex-start;
+            padding-left: 5px;
+            padding-right: 5px;
+            text-align: center;
+        }
 
+        .activity h4, .activity p {
+            text-align: center;
+        }
 }
